# ur5_trajectory_optimization

./: .gitignore  README.md
myur5_moveit_config/: .setup_assistant  package.xml
myur5_moveit_config/config/: chomp_planning.yaml  kinematics.yaml  ros_controllers.yaml  sensors_camera_depthmap.yaml  stomp_planning.yaml  ur5.srdf
myur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit_rviz.launch  planning_context.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  ur5_moveit_controller_manager.launch.xml
otim_traj/: CMakeLists.txt  package.xml
otim_traj/config/: rviz.rviz  ur5_controllers.yaml
otim_traj/launch/: gazebo.launch  moveit.launch  moveit_demo.launch  moveit_webots.launch  rviz_view.launch  spawn.launch
otim_traj/model/makerbot/: model.config  model.sdf
otim_traj/model/object/: model.config  model.sdf
otim_traj/model/table/: model.config
otim_traj/scripts/: futuro.py  grasp_demo.py  orientation_test.py  rfinger.py
otim_traj/scripts/tests/: NOT USE.chomp.03-22-2022_19_21_57_-03.txt  NOT USE.chomp.03-22-2022_19_22_58_-03.txt  NOT USE.chomp.03-22-2022_19_24_51_-03.txt  NOT USE.chomp.03-22-2022_19_27_48_-03.txt  NOT USE.chomp.03-22-2022_19_30_10_-03.txt  NOT USE.chomp.03-22-2022_19_36_35_-03.txt  NOT USE.chomp.03-22-2022_19_39_40_-03.txt  NOT USE.chomp.03-22-2022_19_43_48_-03.txt  NOT USE.chomp.03-22-2022_19_44_13_-03.txt  NOT USE.chomp.03-22-2022_19_47_20_-03.txt  NOT USE.chomp.03-22-2022_19_49_10_-03.txt  NOT USE.chomp.03-22-2022_19_50_39_-03.txt  chomp.03-14-2022_20_04_43_-03.txt  chomp.03-14-2022_20_45_47_-03.txt  chomp.03-14-2022_20_50_42_-03.txt  chomp.03-14-2022_20_53_45_-03.txt  chomp.03-14-2022_20_57_52_-03.txt  chomp.03-14-2022_21_08_51_-03.txt  chomp.03-14-2022_21_12_04_-03.txt  chomp.03-14-2022_21_15_50_-03.txt  chomp.03-14-2022_21_21_36_-03.txt  chomp.03-14-2022_21_32_39_-03.txt  chomp.03-14-2022_21_39_14_-03.txt  chomp.03-14-2022_21_42_59_-03.txt  chomp.03-14-2022_21_47_03_-03.txt  chomp.03-14-2022_21_50_13_-03.txt  chomp.03-14-2022_21_54_16_-03.txt  chomp.03-15-2022_10_32_56_-03.txt  chomp.03-15-2022_10_36_38_-03.txt  chomp.03-15-2022_10_41_24_-03.txt  chomp.03-15-2022_10_49_00_-03.txt  chomp.03-15-2022_10_56_57_-03.txt  chomp.03-15-2022_11_02_14_-03.txt  chomp.03-15-2022_11_08_57_-03.txt  chomp.03-15-2022_11_18_24_-03.txt  chomp.03-15-2022_11_22_48_-03.txt  chomp.03-15-2022_11_36_19_-03.txt  chomp.03-15-2022_11_49_30_-03.txt  chomp.03-15-2022_11_58_06_-03.txt  chomp.03-15-2022_19_38_19_-03.txt  (+677 more)
otim_traj/scripts/tests/r_files/: .RData  .Rhistory  dados_chomp.ods  dados_ompl.ods  dados_stomp.ods  rscript.R
otim_traj/src/: add_objects.cpp  cylinder_detection.cpp  grasp_test.cpp  pick_place.cpp
otim_traj/urdf/: _d435.urdf.xacro  plugin.gazebo.xacro  ur5_grasp.urdf.xacro
otim_traj/worlds/: empty.world
ur5_2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_2_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml  ur5.srdf
ur5_2_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+5 more)
ur5_3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_webots_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+98 files in other folders)
